<resources>
    <string name="app_name">Bitcoin Converter</string>
    <string name="btc_converter">BTC converter</string>
    <string name="_1_btc_n50m">1 BTC = N50m</string>
    <string name="naira">naira</string>
    <string name="ngn">NGN</string>
    <string name="btcvalue">btcvalue</string>
    <string name="btc_in_whole_number">BTC in whole number?</string>
    <string name="convert">Convert</string>
    <string name="btcAmount">BTC</string>
    <string name="nairaAmount">NGN</string>
    <string name="amountrequired">amount Required</string>
    <string name="result">BTC %s</string>
</resources>