<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/appHeading"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        android:text="@string/btc_converter"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/nairaAmountHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/nairaAmountHint"
        android:layout_width="286dp"
        android:layout_height="63dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/amountrequired"
        android:inputType="numberDecimal"
        android:text="@string/ngn"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appHeading" />

    <TextView
        android:id="@+id/result"
        android:layout_width="284dp"
        android:layout_height="57dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/result"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/convertButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nairaAmountHint" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="164dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/convert"
        app:layout_constraintBottom_toTopOf="@+id/switchroundup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchroundup"
        android:layout_width="397dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="30dp"
        android:checked="false"
        android:text="@string/btc_in_whole_number"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertButton"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>